# gas-scraper

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  DESPLIEGUE-DOCKER.md  PROMPT-OPENCODE.md  README.md  docker-compose.lb.yml  docker-compose.yml
prompts/: verify_decisor_llm.md  verify_harvestapi_brief.md
supabase/: schema_v2.sql
supabase/migrations/: 2026-06-15_add_llm_web_resolution_method.sql  2026-06-15_fix_companies_rls_write_policy.sql  2026-06-15_seed_remaining_area_profiles.sql  2026-06-20_add_job_name.sql  2026-06-20_allow_profiles_read.sql
web/: .env.local.example  .eslintrc.json  Dockerfile  package-lock.json  package.json  wrangler.toml
web/src/: middleware.ts
web/src/ds/: index.ts  (+2 more)
worker/: .env.example  Dockerfile  pyproject.toml
worker/tests/: test_classify.py  test_employees_input.py  test_pipeline_staged.py  test_resolve_llm.py  test_resolver_confidence.py  test_verify.py  test_verify_llm.py
worker/tests/fixtures/: apify_employees_sample.json  companies_sample.csv  harvest_profile_sample.json  openrouter_url_check_sample.json  verify_llm_sample.json
worker/worker/: __init__.py  config.py  main.py  supabase_client.py
worker/worker/pipeline/: __init__.py  area_profiles.py  classify.py  cli.py  enrich_phone.py  export_excel.py  harvest.py  models.py  pipeline.py  resolve_llm.py  verify.py  verify_llm.py
worker/worker/pipeline/apify/: __init__.py  client.py  employees.py
worker/worker/pipeline/llm/: openrouter.py
worker/worker/pipeline/resolver/: __init__.py  apify_company_url.py  apify_serp.py  base.py  confidence.py
(+89 files in other folders)
