[project]
name = "gas-worker"
version = "0.1.0"
description = "GAS — worker de procesamiento (pipeline de prospección B2B)"
requires-python = ">=3.11"
dependencies = [
  "supabase>=2.6",
  "httpx>=0.27",
  "openpyxl>=3.1",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "rapidfuzz>=3.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
gas-worker = "worker.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["worker", "worker.pipeline", "worker.pipeline.resolver", "worker.pipeline.apify"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# UP042: usamos `str, Enum` a propósito (idioma compatible y que Pydantic serializa
# a `.value` con model_dump(mode="json")). No migramos a StrEnum.
ignore = ["UP042"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
